--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "ms-mailer-client",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "client for ms-mailer",
   "main": "./lib/index.js",
   "scripts": {
-    "prepublish": "babel ./src -d ./lib --optional es7.objectRestSpread,es7.classProperties,es7.decorators",
-    "test": "npm rebuild && BLUEBIRD_DEBUG=1 NODE_ENV=production ./node_modules/.bin/mocha --require ./test/babelhook.js --bail --timeout 10000 -R xunit > test-report-$(node -v).xml",
+    "compile": "./node_modules/.bin/babel -d ./lib --optional es7.objectRestSpread,es7.classProperties,es7.decorators ./src",
+    "prepublish": "npm run compile",
+    "pretest": "npm rebuild",
+    "test": "BLUEBIRD_DEBUG=1 NODE_ENV=production ./node_modules/.bin/mocha --require ./test/babelhook.js --bail --timeout 10000 -R spec",
     "test-local": "NODE_ENV=development BLUEBIRD_DEBUG=1 ./node_modules/.bin/mocha --require ./test/babelhook.js"
   },
   "keywords": [
@@ -26,6 +28,7 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
+    "babel": "^5.8.34",
     "babel-core": "^5.8.33",
     "babel-eslint": "^4.1.3",
     "chai": "^3.4.1",
@@ -36,6 +39,6 @@
   },
   "dependencies": {
     "lodash": "^3.10.1",
-    "ms-amqp-validation": "^0.3.1"
+    "ms-amqp-validation": "^0.4.1"
   }
 }
