--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ms-mailer-client",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "client for ms-mailer",
   "main": "./lib/index.js",
   "scripts": {
-    "compile": "./node_modules/.bin/babel -d ./lib --optional es7.objectRestSpread,es7.classProperties,es7.decorators ./src",
+    "compile": "if [[ $NODE_ENV != \"production\" ]]; then ./node_modules/.bin/babel -d ./lib --optional es7.objectRestSpread,es7.classProperties,es7.decorators ./src; fi",
     "prepublish": "npm run compile",
     "pretest": "npm rebuild",
-    "test": "BLUEBIRD_DEBUG=1 NODE_ENV=production ./node_modules/.bin/mocha --require ./test/babelhook.js --bail --timeout 10000 -R spec",
-    "test-local": "NODE_ENV=development BLUEBIRD_DEBUG=1 ./node_modules/.bin/mocha --require ./test/babelhook.js"
+    "test": "./node_modules/.bin/mocha --require ./test/babelhook.js --bail --timeout 10000 -R spec"
   },
   "keywords": [
     "microservice",
@@ -30,15 +29,16 @@
   "devDependencies": {
     "babel": "^5.8.34",
     "babel-core": "^5.8.33",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^4.1.6",
     "chai": "^3.4.1",
-    "eslint": "^1.9.0",
+    "eslint": "^1.10.1",
     "eslint-config-airbnb": "^1.0.0",
-    "eslint-plugin-mocha": "^1.0.0",
-    "mocha": "^2.3.3"
+    "eslint-plugin-mocha": "^1.1.0",
+    "eslint-plugin-react": "^3.10.0",
+    "mocha": "^2.3.4"
   },
   "dependencies": {
     "lodash": "^3.10.1",
-    "ms-amqp-validation": "^0.4.1"
+    "ms-validation": "^0.5.1"
   }
 }
