--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ms-mailer-client",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "description": "client for ms-mailer",
   "main": "./lib/index.js",
   "scripts": {
-    "compile": "if [[ $NODE_ENV != \"production\" ]]; then ./node_modules/.bin/babel -d ./lib --optional es7.objectRestSpread,es7.classProperties,es7.decorators ./src; fi",
+    "compile": "./node_modules/.bin/babel -d ./lib ./src",
     "prepublish": "npm run compile",
     "pretest": "npm rebuild",
-    "test": "./node_modules/.bin/mocha --require ./test/babelhook.js --bail --timeout 10000 -R spec"
+    "test": "./node_modules/.bin/mocha --require babel-register --bail --timeout 10000 -R spec"
   },
   "keywords": [
     "microservice",
@@ -27,18 +27,26 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "babel": "^5.8.34",
-    "babel-core": "^5.8.33",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-es2015-destructuring": "^6.3.15",
+    "babel-plugin-transform-es2015-parameters": "^6.3.26",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.3.13",
+    "babel-plugin-transform-strict-mode": "^6.3.13",
     "chai": "^3.4.1",
-    "eslint": "^1.10.1",
-    "eslint-config-airbnb": "^1.0.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.1",
     "eslint-plugin-mocha": "^1.1.0",
-    "eslint-plugin-react": "^3.10.0",
     "mocha": "^2.3.4"
   },
+  "peerDependencies": {
+    "ms-validation": "~1.x.x",
+    "ms-amqp-transport": "*"
+  },
   "dependencies": {
-    "lodash": "^3.10.1",
-    "ms-validation": "^0.5.1"
+    "lodash": "^3.10.1"
+  },
+  "devDependencies": {
+    "ms-validation": "~1.x.x"
   }
 }
