--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ms-mailer-client",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "client for ms-mailer",
   "main": "./lib/index.js",
   "scripts": {
-    "compile": "./node_modules/.bin/babel -d ./lib ./src",
+    "compile": "babel -d ./lib ./src",
     "prepublish": "npm run compile",
     "pretest": "npm rebuild",
-    "test": "./node_modules/.bin/mocha --require babel-register --bail --timeout 10000 -R spec"
+    "lint": "eslint ./src",
+    "test": "npm run lint && mocha --require babel-register --bail --timeout 10000 -R spec"
   },
   "keywords": [
     "microservice",
@@ -27,26 +28,23 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^6.0.0",
+    "babel-cli": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
-    "babel-plugin-transform-es2015-destructuring": "^6.3.15",
-    "babel-plugin-transform-es2015-parameters": "^6.3.26",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.3.13",
     "babel-plugin-transform-strict-mode": "^6.3.13",
     "chai": "^3.4.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
-    "eslint-plugin-mocha": "^1.1.0",
-    "mocha": "^2.3.4"
+    "eslint": "^2.0.0",
+    "eslint-config-airbnb-base": "^3.0.0",
+    "eslint-plugin-mocha": "^2.0.0",
+    "eslint-plugin-import": "^1.8.0",
+    "mocha": "^2.3.4",
+    "ms-validation": "~2.x.x"
   },
   "peerDependencies": {
-    "ms-validation": "~1.x.x",
-    "ms-amqp-transport": "*"
+    "ms-validation": "~2.x.x",
+    "ms-amqp-transport": "~2.x.x"
   },
   "dependencies": {
-    "lodash": "^3.10.1"
-  },
-  "devDependencies": {
-    "ms-validation": "~1.x.x"
+    "lodash": "^4.0.0"
   }
 }
