--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms-mailer-client",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "client for ms-mailer",
   "main": "./lib/index.js",
   "scripts": {
@@ -28,21 +28,21 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "babel-eslint": "^6.0.0",
-    "babel-cli": "^6.0.0",
-    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-cli": "^6.10.1",
+    "babel-eslint": "^6.1.0",
+    "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-strict-mode": "^6.3.13",
     "chai": "^3.4.1",
-    "eslint": "^2.0.0",
-    "eslint-config-airbnb-base": "^3.0.0",
-    "eslint-plugin-mocha": "^2.0.0",
-    "eslint-plugin-import": "^1.8.0",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb-base": "^4.0.0",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-mocha": "^4.0.0",
     "mocha": "^2.3.4",
     "ms-validation": "~2.x.x"
   },
   "peerDependencies": {
     "ms-validation": "~2.x.x",
-    "ms-amqp-transport": "~2.x.x"
+    "ms-amqp-transport": "~2.x.x || ~3.x.x"
   },
   "dependencies": {
     "lodash": "^4.0.0"
