feat: upgrade ms-amqp-transport

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -1,24 +1,27 @@
 {
-  "id": "config",
-  "type": "object",
-  "required": [ "prefix", "routes" ],
-  "properties": {
-    "prefix": {
-      "type": "string",
-      "minLength": 1
-    },
-    "routes": {
-      "type": "object",
-      "properties": {
-        "adhoc": {
-          "type": "string",
-          "minLength": 1
+    "$id": "config",
+    "type": "object",
+    "required": [
+        "prefix",
+        "routes"
+    ],
+    "properties": {
+        "prefix": {
+            "type": "string",
+            "minLength": 1
         },
-        "predefined": {
-          "type": "string",
-          "minLength": 1
+        "routes": {
+            "type": "object",
+            "properties": {
+                "adhoc": {
+                    "type": "string",
+                    "minLength": 1
+                },
+                "predefined": {
+                    "type": "string",
+                    "minLength": 1
+                }
+            }
         }
-      }
     }
-  }
 }
