--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,3 @@
 {
-  "extends": "airbnb-base",
-  "parser": "babel-eslint",
-  "plugins": [
-    "mocha"
-  ],
-  "env": {
-    "mocha": true
-  }
+  "extends": "makeomatic"
 }
