--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms-mailer-client",
-  "version": "5.0.1",
+  "version": "6.0.0",
   "description": "client for ms-mailer",
   "main": "./lib/index.js",
   "scripts": {
@@ -33,15 +33,16 @@
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-strict-mode": "^6.18.0",
     "eslint": "^3.11.0",
-    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-config-makeomatic": "^1.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-promise": "^3.5.0",
     "mocha": "^3.2.0",
-    "ms-validation": "^3.0.0"
+    "ms-validation": "^4.0.0"
   },
   "peerDependencies": {
-    "ms-validation": "~2.x.x || ~3.x.x",
-    "ms-amqp-transport": ">= 2.x.x < 8"
+    "ms-amqp-transport": ">= 8.x.x < 9",
+    "ms-validation": "~4.x.x"
   },
   "dependencies": {
     "lodash": "^4.17.2"
