--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "compile": "babel -d ./lib ./src",
     "prepublish": "npm run compile",
+    "postversion": "git push && npm publish && git push --tags",
     "pretest": "npm rebuild",
     "lint": "eslint ./src",
     "test": "npm run lint && mocha --require babel-register --bail --timeout 10000 -R spec"
@@ -34,15 +35,15 @@
     "babel-plugin-transform-strict-mode": "^6.18.0",
     "eslint": "^3.11.0",
     "eslint-config-makeomatic": "^1.0.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-promise": "^3.5.0",
-    "mocha": "^3.2.0",
-    "ms-validation": "^4.0.0"
+    "mocha": "^3.4.2",
+    "ms-validation": "^5.0.1"
   },
   "peerDependencies": {
-    "ms-amqp-transport": ">= 8.x.x < 9",
-    "ms-validation": "~4.x.x"
+    "ms-amqp-transport": ">= 8.x.x < 10",
+    "ms-validation": "~4.x.x | ~5.x.x"
   },
   "dependencies": {
     "lodash": "^4.17.2"
