--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
-    "transform-strict-mode",
-    "transform-class-properties"
+    "@babel/plugin-transform-strict-mode",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
