--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "compile": "babel -d ./lib ./src",
     "prepublishOnly": "yarn compile",
-    "postversion": "git push && npm publish && git push --tags",
     "lint": "eslint ./src",
-    "test": "yarn lint && mocha --require babel-register --bail --timeout 10000 -R spec"
+    "test": "yarn lint && mocha --require @babel/register --bail --timeout 10000 -R spec",
+    "semantic-release": "semantic-release"
   },
+  "files": [
+    "lib/",
+    "src/"
+  ],
   "keywords": [
     "microservice",
     "amqp",
@@ -28,25 +32,34 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-strict-mode": "^6.18.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-transform-strict-mode": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@makeomatic/deploy": "^8.0.1",
+    "@microfleet/validation": "^8.0.0",
+    "babel-eslint": "^10.0.1",
     "common-errors": "^1.0.5",
-    "eslint": "^4.15.0",
-    "eslint-config-makeomatic": "^2.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "mocha": "^5.0.0",
-    "ms-validation": "^7.0.0"
+    "eslint": "^5.7.0",
+    "eslint-config-makeomatic": "^3.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "mocha": "^5.2.0"
   },
   "peerDependencies": {
     "@microfleet/transport-amqp": ">= 12.x.x",
-    "common-errors": "~1.x.x",
-    "ms-validation": ">= 7.x.x"
+    "@microfleet/validation": ">= 8.x.x",
+    "common-errors": "~1.x.x"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.0"
+    "lodash.merge": "^4.6.1"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "./node_modules/@makeomatic/deploy/git-hooks/prepare-commit-msg $HUSKY_GIT_PARAMS"
+    }
   }
 }
