--- a/package.json
+++ b/package.json
@@ -33,29 +33,29 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-transform-strict-mode": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@makeomatic/deploy": "^8.0.1",
-    "@microfleet/validation": "^8.0.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-strict-mode": "^7.8.3",
+    "@babel/register": "^7.8.6",
+    "@makeomatic/deploy": "^10.1.3",
+    "@microfleet/validation": "^9.0.1",
+    "babel-eslint": "^10.1.0",
     "common-errors": "^1.0.5",
-    "eslint": "^5.7.0",
-    "eslint-config-makeomatic": "^3.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "mocha": "^5.2.0"
+    "eslint": "^6.8.0",
+    "eslint-config-makeomatic": "^4.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "mocha": "^7.1.0"
   },
   "peerDependencies": {
     "@microfleet/transport-amqp": ">= 12.x.x",
-    "@microfleet/validation": ">= 8.x.x",
+    "@microfleet/validation": ">=9.0.1",
     "common-errors": "~1.x.x"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.1"
+    "lodash.merge": "^4.6.2"
   },
   "husky": {
     "hooks": {
