--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-strict-mode": "^7.8.3",
-    "@babel/register": "^7.8.6",
-    "@makeomatic/deploy": "^10.1.3",
-    "@microfleet/validation": "^9.0.1",
-    "babel-eslint": "^10.1.0",
-    "common-errors": "^1.0.5",
-    "eslint": "^6.8.0",
-    "eslint-config-makeomatic": "^4.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-mocha": "^6.3.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "mocha": "^7.1.0"
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-strict-mode": "^7.18.6",
+    "@babel/register": "^7.18.9",
+    "@makeomatic/deploy": "^12.9.0",
+    "@microfleet/validation": "^11.1.3",
+    "common-errors": "^1.2.0",
+    "eslint": "^8.33.0",
+    "eslint-config-makeomatic": "^5.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "mocha": "^10.2.0"
   },
   "peerDependencies": {
     "@microfleet/transport-amqp": ">= 12.x.x",
@@ -56,11 +56,5 @@
   },
   "dependencies": {
     "lodash.merge": "^4.6.2"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "./node_modules/@makeomatic/deploy/git-hooks/prepare-commit-msg $HUSKY_GIT_PARAMS"
-    }
   }
 }
