feat: upgrade to ensure microfleet/validation is of compatible version

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -25,6 +25,7 @@
             }
         },
         "publishOptions": {
+            "type": "object",
             "properties": {
                 "adhoc": {
                     "type": "object",
