--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "ms-mailer-client",
   "version": "7.0.0",
   "description": "client for ms-mailer",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "compile": "babel -d ./lib ./src",
-    "prepublishOnly": "yarn compile",
     "lint": "eslint ./src",
-    "test": "yarn lint && mocha --require @babel/register --bail --timeout 10000 -R spec",
-    "semantic-release": "semantic-release"
+    "test": "pnpm lint && mocha --bail --timeout 10000 -R spec",
+    "semantic-release": "semantic-release",
+    "prepare": "mdep install || true"
   },
   "files": [
-    "lib/",
     "src/",
     "schemas/"
   ],
@@ -33,28 +31,23 @@
   },
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-strict-mode": "^7.18.6",
-    "@babel/register": "^7.18.9",
-    "@makeomatic/deploy": "^12.9.0",
-    "@microfleet/validation": "^11.1.3",
+    "@makeomatic/deploy": "^13.0.7",
     "common-errors": "^1.2.0",
     "eslint": "^8.33.0",
-    "eslint-config-makeomatic": "^5.1.0",
+    "eslint-config-makeomatic": "^6.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unicorn": "^45.0.2",
-    "mocha": "^10.2.0"
+    "eslint-plugin-unicorn": "^50.0.1",
+    "mocha": "^10.2.0",
+    "semantic-release": "^23.0.0"
   },
   "peerDependencies": {
     "@microfleet/transport-amqp": ">= 12.x.x",
-    "@microfleet/validation": ">=9.0.1",
     "common-errors": "~1.x.x"
   },
   "dependencies": {
+    "@microfleet/validation": "=11.x.x",
     "lodash.merge": "^4.6.2"
   }
 }
