--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/makeomatic/ms-mailer-client#readme",
   "devDependencies": {
     "@makeomatic/deploy": "^13.0.7",
+    "@microfleet/validation": "^12.0.0",
     "common-errors": "^1.2.0",
     "eslint": "^8.33.0",
     "eslint-config-makeomatic": "^6.0.0",
@@ -44,10 +45,10 @@
   },
   "peerDependencies": {
     "@microfleet/transport-amqp": ">= 12.x.x",
+    "@microfleet/validation": ">= 12.x.x",
     "common-errors": "~1.x.x"
   },
   "dependencies": {
-    "@microfleet/validation": "=11.x.x",
     "lodash.merge": "^4.6.2"
   }
 }
